--- a/.env
+++ b/.env
@@ -4,11 +4,15 @@ DEBUG=True
 # Flask ENV
 FLASK_APP=run.py
 FLASK_ENV=development
+FLASK_DEBUG=1
 
 # Used for CDN (in production)
-# No Slash at the end
 ASSETS_ROOT=/static/assets
 
-# LOCAL 5001 FLask
-# GITHUB_ID = <YOUR_GITHUB_ID>
-# GITHUB_SECRET = <YOUR_GITHUB_SECRET>
+# Database connection
+DB_ENGINE=mysql
+DB_NAME=hub_mconfea
+DB_USERNAME=hub_user
+DB_PASS=hub_pass
+DB_HOST=mysql
+DB_PORT=3306
