feat: Implementa cadastro de clientes e correções no formulário - Corrige mapeamento de campos, adiciona validação e feedback de erros, implementa campos condicionais e melhora layout

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,12 +6,12 @@ ENV PYTHONUNBUFFERED 1
 ENV FLASK_APP run.py
 ENV FLASK_DEBUG 1
 
+WORKDIR /app
+
 COPY requirements.txt .
 
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
-
-COPY env.sample .env
 
 COPY . .
 
