--- a/nginx/appseed-app.conf
+++ b/nginx/appseed-app.conf
@@ -3,13 +3,14 @@ upstream webapp {
 }
 
 server {
-    listen 5085;
+    listen 80;
     server_name localhost;
 
     location / {
         proxy_pass http://webapp;
-        proxy_set_header Host $host:$server_port;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
-
 }
